apps/02-agent2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  
spec:
  ingressClassName: nginx
  rules:
  - host: "agent2.127.0.0.1.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-service
  name: echo-service
  
spec:
  type: ClusterIP
  ports:
  - name: echo-deployment
    port: 80
    targetPort: 5678
  selector:
    app: echo-server
